# forge-tool

./: .env.example  .gitignore  COMPANY_RESEARCH_SUMMARY.md  CRITICAL_ISSUE_REPORT.md  DATAWIZARD_INFOGRAPHIC_PROMPT.md  DATAWIZARD_READY.md  DEPLOYMENT_GUIDE.md  EMAIL_INTEGRATION_GUIDE.md  EXA_AUTO_RESEARCH_IMPLEMENTATION.md  EXA_DEBUGGING_GUIDE.md  EXA_RESEARCH_GUIDE.md  FEEDBACK_LOOP_SUMMARY.md  FOCUSMATE_BUILD.md  FOCUSMATE_OAUTH_SETUP.md  GEMINI_KEY_FIX_GUIDE.md  HOW_TO_CHECK_EXA.md  MONETIZATION_SETUP.md  NANO_BANANA_PROMPT.txt  README.md  RESEND_SETUP_GUIDE.md  SECURITY_API_KEY_ROTATION.md  SUPABASE_SETUP_GUIDE.md  VERCEL_API_KEY_UPDATE_CHECKLIST.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_ENV_FIX.md  WEEK1_PROGRESS.md  WEEK1_SUMMARY.md  companies_decin_liberec_regions.csv  middleware.js  next.config.mjs  package-lock.json  package.json  supabase-feedback-schema.sql  supabase-setup.sql  supabase-subscription-schema.sql  tsconfig.json  vercel.json
notix-poc/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  ai-privatni-banker-demo.html  demo.html  docker-compose.yml  pyproject.toml  requirements.txt  run-demo.sh  vercel.json
notix-poc/agents/: __init__.py  anomaly.py  audit_logger.py  categorization.py  governance.py  ingestion.py  insight.py  pii_redaction.py  pipeline.py  report_composer.py
notix-poc/api/: main.py
notix-poc/data/: personas.py  transaction_generator.py
notix-poc/policies/: default.yaml
notix-poc/tests/: conftest.py  test_anomaly.py  test_audit_logger.py  test_categorization.py  test_governance.py  test_ingestion.py  (+5 more)
(+103 files in other folders)
